# BatteryStatus

./: CMakeLists.txt  README.md  changelog.md  changelogs.md  mod.json
android/src/main/java/com/geode/mods/batterystatus/: BatteryStatusHelper.java
src/: BatteryStatus.cpp  BatteryStatus.hpp  android.cpp  android.java  ios.mm  macos.mm  main.cpp  windows.cpp
